Fix: `InfoPopover` align address copy button

--- a/src/modules/core/components/InfoPopover/InfoPopover.css
+++ b/src/modules/core/components/InfoPopover/InfoPopover.css
@@ -1,23 +1,26 @@
 .main {
-  padding: 10px 5px;
+  padding: 9px 4px;
   max-width: 430px;
-  font-size: var(--size-normal);
+  font-size: var(--size-small);
 }
 
 .displayName {
   composes: inlineEllipsis from '~styles/text.css';
-  margin: 0 0 7px 0;
-  font-size: var(--size-normal);
+  margin: 0 0 6px 0;
   font-weight: var(--weight-semi);
   color: var(--colony-black);
 }
 
 .userName {
   composes: inlineEllipsis from '~styles/text.css';
-  margin: 0 0 7px 0;
+  margin: 0 0 6px 0;
 }
 
 .userName a {
   font-weight: var(--weight-semi);
   color: var(--pink);
+}
+
+.address button {
+  height: auto;
 }
